#3-14 Installing Redux Dev Tools

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "reactotron-react-js": "^3.0.1",
     "reactotron-redux": "^3.1.0",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6"
   }
 }
