--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
+    "redux-i18n": "^1.5.17",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
