--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "connected-react-router": "^6.3.2",
     "history": "^4.9.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.1",
@@ -13,7 +14,8 @@
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-i18n": "^1.5.17",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reset-css": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
