--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-router-redux": "^4.0.8",
+    "react-spinners": "^0.5.4",
     "redux": "^4.0.1",
     "redux-i18n": "^1.5.17",
     "redux-thunk": "^2.3.0",
